--- a/sass/rootstyles.scss
+++ b/sass/rootstyles.scss
@@ -34,10 +34,11 @@ body ul {
 
 .blueCol {
   border-radius: 20px;
+  padding-bottom: 10px;
+  text-align: center;
 }
 
 .col-md-2, .col-md-3 {
-  
 }
 
 .musicRow {
